NMJ Salesforce Project/src/objects/Relation__c.object
<CustomObject>
    <description>Custom object to capture people as customer&apos;s accompaniments.</description>
    <fields>
        <fullName>Parent_Contact__c</fullName>
        <description>The parent contact to which this relation is linked to.</description>
        <inlineHelpText>The parent contact to which this relation is linked to.</inlineHelpText>
        <label>Parent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relations</relationshipLabel>
        <relationshipName>P_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact associated to this relationship.</description>
        <inlineHelpText>The contact associated to this relationship.</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relations(Self)</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <description>The type of Relationship</description>
        <label>Relation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Relationship_ExternalID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL-{00000000}</displayFormat>
        <label>Relation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>